hphp/hack/test/typecheck/this_param.php.exp
File "this_param.php", line 23, characters 16-19:
Invalid argument (Typing[4110])
File "this_param.php", line 23, characters 5-9:
Expected this
File "this_param.php", line 21, characters 24-26:
But got Foo
File "this_param.php", line 12, characters 7-9:
Since Foo is not final
File "this_param.php", line 21, characters 24-26:
this might not be a Foo
